k8s/bookinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo-test
  labels:
    istio.io/dataplane-mode: ambient
