k8s/bookinfo/bookinfo-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bookinfo.bramble
  labels:
    environment: minibramble
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-class-name: istio
    gateway.networking.k8s.io/gateway-name: bookinfo-gateway
    istio.io/dataplane-mode: none
    owner: bramble
  name: bookinfo-gateway-istio
  namespace: bookinfo-test
spec:
  type: LoadBalancer
